--- a/css/styles.css
+++ b/css/styles.css
@@ -25,13 +25,13 @@ h1{
 
 }
 
-.o:after {
+.o::after {
     position: absolute;                     /* alimina a quebra da linha do quadrado */
     content: "\1F413";
     font-size: 50px;
     line-height: 100px;                     /* porque é a altura do quadrado */
 /* centralizando o elemento em relação ao elemento pai */
-    background-color: red;
+    
     top: 0;
     bottom: 0;
     left: 0;
@@ -45,12 +45,12 @@ h1{
 
 }
 
-.x:after {
+.x::after {
     position: absolute;                     
     content: "\1F43A";
     font-size: 50px;
     line-height: 100px;                     
-    background-color: red;
+   
     top: 0;
     bottom: 0;
     left: 0;
