--- a/css/styles.css
+++ b/css/styles.css
@@ -1,11 +1,15 @@
 
+
+
 body {
     text-align: center;
+    background-color: #9FA7A9;
+    
 }
 
 
 h1{
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Press Start 2P', cursive;
     
 }
 
@@ -15,7 +19,7 @@ h1{
     width: 100px;
     height: 100px;
     background-color: antiquewhite;
-    border: 1px solid gray;
+    border: 1px solid black;
 
     display: inline-block;                  /* pra ficar em bloco um ao lado do outro */
 }
@@ -57,3 +61,33 @@ h1{
     right: 0;
 
 }
+
+
+
+.btn_reiniciar {
+    background: rgb(241, 85, 85);   
+    border-radius: 25px;
+    height: 10px;
+    line-height: 0;
+
+    color: white;
+    font-family: 'Courier New', Courier, monospace;
+    width: 100px;
+    font-size: 12px;    
+    padding: 10px;
+    
+    box-shadow: 1px 1px 6px 0 black;
+    text-decoration: none;
+    display: inline-block;
+    cursor: pointer;
+
+    
+    
+ }
+ 
+ .btn_reiniciar:hover {
+    border: solid white 1px;
+    background: #811616; 
+    border-radius: 20px;
+    text-decoration: none;
+ }
